src/app/shared/payments-card-info/payments-card-info.component.scss
@import '~style/common';

$card-height: 151px;

.PaymentsCardInfo {
  border: solid 1px $blue-grey-5;
  border-radius: 6px;
  padding: $spacing-ml;
  font-size: $font-size-s;
  min-height: $card-height;

  &--error {
    border: solid 1px $warn;
  }

  &__brand {
    font-weight: $font-weight-chunky;
  }

  &__date {
    span {
      font-size: $font-size-xs;
    }
  }

  &__number {
    flex: 1;
  }

  &--grey {
    color: $blue-grey-3;
  }

  &__actions {
    font-size: $font-size-s;

    &--change,
    &--delete {
      cursor: pointer;
      &:hover {
        text-decoration: underline;
      }
    }
    &--change {
      color: $walla-main;
    }
    &--delete {
      color: $negative-main;
    }
  }
}

